<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.pallavi.chat_app.Register"
        android:orientation="vertical"
    android:background="@drawable/reg_bg1"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="60dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_username1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#90a4ae"
       >
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:textColor="#ffffff"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#90a4ae"
        >
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            android:textColor="#ffffff"
            />


    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#90a4ae">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:textColor="#ffffff"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#90a4ae">

        <EditText
            android:id="@+id/input_cpassword1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hint_cpassword"
            android:textColor="#ffffff"/>
    </android.support.design.widget.TextInputLayout>
    <Button android:id="@+id/btn_signup1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_signup1"
        android:background="#fbc02d"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/black"/>


</LinearLayout>
